--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Turma 9 A itaú</title>
+    <title>Turma 9A -Testando...</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
