--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Turma 9A -Testando...</title>
+    <title>Turma 9 A itau</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Turma 9 A itaú</h1>
+    <h1>Turma 9A TESTANDO....</h1>
     <p>Bem vindo Turma 9 A itaú</p>
   </body>
 </html>
