--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Turma 9 A itau</title>
+    <title>Turma 9A Teste</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Turma 9A TESTANDO....</h1>
-    <p>Bem vindo Turma 9 A itaú</p>
+    <h1>Turma 9A </h1>
+    <p> _____TESTANDO____ </p>
   </body>
 </html>
